Message: Fix jumping stickers

--- a/src/components/middle/MessageList.scss
+++ b/src/components/middle/MessageList.scss
@@ -46,7 +46,7 @@
     }
   }
 
-  .empty {
+  > .empty {
     width: 100%;
     height: 100%;
     display: flex;
